objects/MarketoAuthCreds__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Creds to get the Marketo&apos;s access token</description>
    <fields>
        <fullName>ClientId__c</fullName>
        <description>Indicates the client ID</description>
        <label>Client Id</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <description>Indicates the client secret</description>
        <label>Client Secret</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantType__c</fullName>
        <defaultValue>&apos;client_credentials&apos;</defaultValue>
        <description>Indicates the grant type</description>
        <label>Grant Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Marketo Login</label>
</CustomObject>